major change: put assistant mode in a separate thread

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,6 @@
+7/7/13
+- fixed territory counting bug
+- make assistance threaded
 
 7/4/13
 - add freeglut (instead of original glut) to display text
