--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,8 @@
+7/8
+- make assitance shown in perspective transform
+- fix bug on adding stones
+- fix bug in events of capturing stones
+
 7/7/13
 - fixed territory counting bug
 - add territory counting
